[CMS-4] Available players API
